--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "steam-card-bot-pro",
-  "version": "1.6.5",
+  "version": "v1",
   "description": "An free open source, fully automated Level Up Bot with all features and support and much more",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "title Refloow / Steam-Card-Bot-PRO & node index.js pause"
+    "start": "title Refloow / Steam-Card-Bot-PRO / killerboy777 fork & node index.js pause"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Refloow/Steam-Card-Bot-PRO.git"
+    "url": "git+https://github.com/killerboyyy777/Steam-Card-Bot-PRO.git"
   },
   "keywords": [
     "Steam",
@@ -21,13 +21,13 @@
     "stgeamcardbot",
     "levelbot"
   ],
-  "author": "Veljko Vuckovic",
+  "author": "killerboy777",
   "license": "MIT",
-  "years": "2020-2022-2023",
+  "years": "2025",
   "bugs": {
-    "url": "https://github.com/Refloow/Steam-Card-Bot-PRO/issues"
+    "url": "https://github.com/killerboyyy777/Steam-Card-Bot-PRO/issues"
   },
-  "homepage": "https://github.com/Refloow/Steam-Card-Bot-PRO",
+  "homepage": "https://github.com/killerboyyy777/Steam-Card-Bot-PRO",
   "dependencies": {
     "colors": "1.4.0",
     "console-master": "^1.0.3",
