--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
 
-custom: ["https://refloow.com/cdonate", "https://steamcommunity.com/tradeoffer/new/?partner=994828078&token=XEUdbqp6"]
+custom: ["https://linktr.ee/killerboy777", "https://steamcommunity.com/tradeoffer/new/?partner=1211192445&token=T9Hiu3Oz"]
